
bb-scripts => brightspace status

1) Obsolete/deleted scripts

These scripts interacted directly with BlackBoard (using curl/sed), and are thus so closely related to the (lack of) functionality that that system provided that they will not be useful:

- bblogin2.sh
- assignta.sh
- getsch.sh
- bbfix.sh
- upload.sh
- mksdir.sh
- hak2.sh (replaced by hak3.sh!)

Also, xmail.sh was deleted, because it was a silly script.

2) Disabled scripts

These scripts require the presence of the "Blackboard response files"
(the famed s*/s*.txt), or a list of usernames+email addresses to function.
The functionality they provided may be quite useful, but we need to find
out what a good "best practice" is with Brightspace before porting them.

- rgrade.sh
- groepjes.sh
- count.sh
- stats.sh

These scripts are possibly unnecessary in the future:

- wizard.sh
- feedback.sh
  - mailto.sh
  - grades.sh

3) Scripts that should work without modifications.

- jarify.sh
- iching.sh
- pol.sh
- trialc.sh

4) New/ported scripts

- bsunzip.sh
	unzips a zip file downloaded from brightspace, and sorts the submission comments contained in 'index.html'
	into the correct folders (as a .txt file)
- hak3.sh
	sorts *all subdirectories* into fresh bins (hak2.sh only sorted s-directories)
	note: this probably also need to split/distribute the index.html that brightspace gives us
- dupes.sh 
	finds possible duplicate handins in C++/Java code
- antifmt.sh
	now expects the directories to process as arguments
	(any arguments that are not directories will be ignored)
- collectplag.sh
	edited out the part that fetches grading/name info; substituted by simply
	giving the directory name of the offending submission
- verdeel.sh
	does roughly the same thing as before, but you need to download the .zip from brightspace yourself now