@@ -3,7 +3,9 @@ bb-scripts => brightspace status
 
 1) Obsolete/deleted scripts
 
-These scripts interacted directly with BlackBoard (using curl/sed), and are thus so closely related to the (lack of) functionality that that system provided that they will not be useful:
+These scripts interacted directly with BlackBoard (using curl/sed),
+and are thus so closely related to the (lack of) functionality that that
+system provided that they will not be useful:
 
 - bblogin2.sh
 - assignta.sh
@@ -22,7 +24,6 @@ These scripts require the presence of the "Blackboard response files"
 The functionality they provided may be quite useful, but we need to find
 out what a good "best practice" is with Brightspace before porting them.
 
-- rgrade.sh
 - groepjes.sh
 - count.sh
 - stats.sh
@@ -57,5 +58,7 @@ These scripts are possibly unnecessary in the future:
 - collectplag.sh
 	edited out the part that fetches grading/name info; substituted by simply
 	giving the directory name of the offending submission
+- rgrade.sh
+	instead of relying on the 'Graded:' column, this now drops a hidden ".seen" file when it thinks you are done
 - verdeel.sh
 	does roughly the same thing as before, but you need to download the .zip from brightspace yourself now
